test/sema/typeck/trait/super-trait-cycle-self.out
error: cycle in type hierarchy detected.
--> super-trait-cycle-self.dora:1:10
 | trait A: A {}
            ~
 | 
1 error found.
